# AI-Writer

./: .dockerignore  .gitignore  Dockerfile  docker-compose.vdi.yml  docker-compose.yml  start.bat  start.command
.devin/skills/ai-writer/: README.md  SKILL.md
.devin/skills/ui-ux-pro-max/: SKILL.md
backend/: db.py  logging_config.py  main.py  pyproject.toml  requirements.txt
backend/middleware/: __init__.py  rate_limit.py
backend/models/: __init__.py  custom_style.py  history.py  schemas.py  user.py
backend/prompts/: writing.py
backend/routers/: analysis.py  auth.py  history.py  styles.py  writing.py
backend/services/: auth.py  docx_export.py  file_parser.py  llm_provider.py  ollama_client.py  pdf_export.py  pptx_export.py  text_analysis.py  unsplash.py
docs/: AI写作助手项目介绍.pptx  API.md  ARCHITECTURE.md  ARCHITECTURE_En.md  AUTO_PUBLISH_COMPARISON.md  CHANGELOG.md  CHANGELOG_En.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT.md  DEPLOY_Mac.md  DEPLOY_Windows.md  README.md  README_En.md  SPEC.md  SPEC_En.md  competitive_analysis.html  gen_ppt.py
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AuthPanel.css  AuthPanel.tsx  ConfirmDialog.css  (+15 more)
tests/: README.md  run_tests.sh
tests/backend/: conftest.py  test_file_parser.py  test_pptx_export.py  test_prompts.py  test_routers.py  test_schemas.py
tests/frontend/: Accessibility.test.tsx  HistoryPanel.test.tsx  ResultPanel.test.tsx  WritingForm.test.tsx  history.test.ts
tests/scenarios/: backend.md  frontend.md
(+5 files in other folders)
